tdf#107677 html import: Import ISO8601 datetime in html meta tags too.

Change-Id: I51073f5c9e433fb1d9dd2c62bcfea38b299aa010